# botbot

./: .env.prod.example  .env.production  .gitignore  AI_AUTO_FINANCE_SKILLS.md  AI_LOCAL_EVALUATION.md  AI_PAYMENT_SKILLS.md  AI_SKILLS_SUMMARY.md  ALIPAY_SDK_FIX.md  API_ENDPOINTS.md  API_UPDATE_REPORT.md  API_URL_FIX.md  AUTHENTICATION_GUIDE.md  CHUNK_ERROR_FIX.md  CLAUDE.md  COMPLETION_SUMMARY.md  CORS_CONFIG.md  CORS_FIX.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  FINAL_DEPLOY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOBSTER_SKILLS_COMPLETE.md  MIGRATION_GUIDE.md  NGINX_FIX_SUMMARY.md  NGINX_PRODUCTION_SUMMARY.md  NGINX_SSL_SETUP.md  PRODUCTION_DEPLOY.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_SECRETS_SETUP.md  PROJECT_CHECKLIST.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_DEPLOY.md  QUICK_FIX.md  QUICK_START.md  README.md  REDEPLOY_GUIDE.md  (+27 more)
be/: .env.example  .env.production  .env.production.example  .env.test  .gitignore  Dockerfile  add_indexes.py  pyproject.toml  pytest.ini  requirements.txt  test_alipay_import.py
be/app/: __init__.py  main.py
be/app/api/: __init__.py
be/app/core/: __init__.py  config.py  security.py  security_checks.py
be/app/db/: __init__.py  mongodb.py
be/app/schemas/: arbitration.py  auth.py  bid.py  contract.py  payment.py  rating.py  task.py  user.py
be/app/services/: __init__.py  ai_service.py  alipay_service.py  bid_service.py  (+8 more)
be/scripts/: add_email_field.py
be/tests/: __init__.py  conftest.py  test_api_ai.py  test_api_auth.py  test_api_bids.py  test_api_tasks.py  test_auth_service.py  test_security.py
(+68 files in other folders)
